fix vertical offcanvas button shift, lvsn/openculturas#582

--- a/profile/themes/openculturas_base/templates/page/offcanvas.scss
+++ b/profile/themes/openculturas_base/templates/page/offcanvas.scss
@@ -30,7 +30,7 @@
     grid-column: 2 / 16;
     display: flex;
     justify-content: space-between;
-    margin-top: $grid-gutter * 3;
+    margin-top: 3.5rem;
 
     .block-system-branding-block {
       .site-name {
